--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     />
 
-    <title>TodoList with React & Postgres</title>
+    <title>TodoList with React & PostgreSQL</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
